[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/music/thump.wav" type="AudioStream" id=1]
[ext_resource path="res://actors/dinos/spriteframes/MegaDino.tres" type="SpriteFrames" id=2]
[ext_resource path="res://assets/music/Robot Dino Died.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/dinos/lifebar_fill.png" type="Texture" id=5]
[ext_resource path="res://assets/dinos/lifebar_bg.png" type="Texture" id=6]
[ext_resource path="res://actors/dinos/GeneralDino.gd" type="Script" id=11]

[sub_resource type="Animation" id=1]
resource_name = "1walk"
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "1walk" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionPolygon2D:polygon")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ PoolVector2Array( -144.435, -75.4793, -121.31, -53.7702, -53.3513, -27.8136, -4.74181, -28.7575, 14.6076, -39.6121, 15.5515, -61.7931, 40.5642, -61.3212, 56.1381, -48.1069, 71.712, -61.3212, 89.6456, -59.9054, 85.8701, -45.2753, 106.635, -26.8698, 114.658, -29.7014, 166.099, 29.7627, 153.829, 40.6172, 141.559, 41.0892, 117.018, 23.6275, 94.8369, 30.2346, 95.3089, 14.6607, 49.531, 9.46939, 43.3958, 46.2805, 18.8551, 44.3927, -1.91019, 24.0994, 0.449509, 4.75002, -52.4075, -2.32904, -116.119, -35.8366, -150.098, -53.2982, -164.903, -79.4317 ), PoolVector2Array( -151.548, -45.5649, -125.518, -40.2255, -109.5, -32.2165, -79.1327, -30.8817, -53.1033, -25.876, 13.9724, -30.2142, 18.9781, -58.2459, 46.3423, -63.9189, 61.0255, -58.2459, 65.03, -39.5581, 83.0504, -33.5513, 103.74, -44.8975, 129.102, -44.2301, 146.122, -28.5457, 131.772, -11.5265, 132.773, 3.82417, 121.427, 2.82304, 124.097, 21.5108, 119.758, 27.8513, 66.0312, 19.1748, 69.0345, 29.8536, 20.9803, 37.1952, 14.6398, 8.82983, -77.1304, -3.18373, -112.17, -19.2018, -136.531, -19.5355 ), PoolVector2Array( -154.413, 17.7588, -133.062, -2.84289, -115.082, -2.09374, -69.7583, -26.0667, -30.0532, -42.9226, -25.9329, -70.2667, -10.2006, -74.0125, -6.08029, -66.1464, 37.3706, -66.8955, 55.7249, -79.6311, 73.7046, -59.7786, 97.3029, -56.4074, 109.664, -62.026, 119.403, -52.287, 143.75, -55.2836, 162.854, -47.7921, 162.105, -29.0633, 140.005, -13.7056, 123.898, 3.89949, 94.3063, 8.76899, 84.5673, 20.0063, 56.8486, 17.0097, 32.5011, 31.9927, 24.635, 5.39781, 10.7757, -9.2107, -30.4278, -13.7056, -78.7482, -3.21746, -116.955, 21.8792 ), PoolVector2Array( -163.601, 70.2041, -152.092, 44.4089, -130.265, 43.6152, -100.501, 20.9947, -58.4352, 1.54906, -4.06673, -9.56275, -2.08247, -32.1832, 18.1569, -26.6273, 20.538, -46.073, 38.7931, -52.0257, 48.3175, -17.1029, 95.1458, -22.2619, 100.305, -35.7549, 118.163, -29.0084, 146.34, -48.0572, 166.976, -34.5643, 135.228, 5.51756, 79.6687, 42.4246, 88.7962, 46.79, 83.2403, 56.7112, 49.9049, 44.012, 33.634, 57.1081, 12.9978, 55.1238, 13.3947, 31.3128, -6.44783, 22.979, -48.5139, 22.5821, -118.756, 44.012, -143.758, 69.4104 ), PoolVector2Array( -155.404, 13.6804, -135.605, -7.88638, -114.038, -10.0077, -66.3083, -26.9783, -27.771, -31.5745, 15.009, -37.5849, 21.373, -61.9801, 45.4146, -64.4549, 67.6885, -59.1516, 68.042, -47.1308, 88.1946, -46.7773, 99.5083, -54.2019, 126.025, -53.1412, 124.257, -45.363, 111.529, -40.7668, 131.682, -34.4029, 130.267, -18.1394, 146.884, -3.64375, 144.41, 5.19509, 133.803, 9.43774, 128.853, 18.2766, 81.477, 6.96286, 58.1425, 15.0946, 62.0316, 29.9438, 45.061, 35.6007, 22.0801, 30.6509, 12.1806, 1.30601, -44.0344, -5.41151, -125.352, 8.73063 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CollisionPolygon2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0.374588, 0.0227356 ), Vector2( 0.374588, 23.2465 ), Vector2( 0.374588, 23.4338 ), Vector2( 0.374588, 5.51654 ), Vector2( 0.374588, 5.39168 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "2walk"
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "2walk" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionPolygon2D:polygon")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ PoolVector2Array( -94.421, -27.4149, -73.7076, -20.5105, -19.1401, -20.5105, 2.46422, -34.5421, 23.6231, -37.6602, 34.3138, -33.2058, 49.4591, -41.892, 64.6044, -35.8784, 58.3681, -25.8558, 91.7806, -3.94644, 112.074, 12.3354, 112.546, 27.4374, 105.939, 30.505, 73.611, 7.38005, 62.2845, 12.0994, 50.4861, 6.67214, 30.1928, 5.96424, 17.2146, 18.4706, 4.47224, 22.718, -15.5851, 17.7627, -18.4167, 3.60455, -42.2495, 1.48083, -44.8452, -3.00257, -70.3298, -7.72194, -137.731, -43.3364, -140.254, -49.2227, -132.686, -47.1205 ), PoolVector2Array( 20.6401, -36.1316, 30.4045, -35.8166, 37.964, -28.5721, 68.2021, -26.0522, 79.2264, -32.6668, 106.315, -25.1073, 114.819, -18.4927, 117.024, -9.98824, 111.669, -4.63358, 105.37, -4.3186, 90.5657, -6.83844, 74.1868, 6.39073, 67.5722, 9.54053, 57.1778, 8.91058, 45.8385, 13.0053, 30.7195, 6.07575, 26.9397, 12.3754, 30.4045, 16.7851, 26.3098, 19.6199, 26.3098, 24.0296, 17.4903, 24.0296, 10.5607, 18.36, 1.74129, 20.5648, -4.55831, 19.3049, -4.87329, 6.07575, -72.5941, -4.94855, -133.23, -25.7086, -135.12, -32.9531, -103.937, -25.3936, -69.9187, -23.1887, -44.0904, -18.464, -2.82794, -25.7086, 0.636841, -28.2284, -2.19798, -30.4333, 3.78664, -47.4422, 14.496, -47.7572, 20.7956, -45.5523 ), PoolVector2Array( -28.5593, -49.8723, -20.8782, -46.9587, -15.0511, -41.3966, 19.1166, -42.456, 64.6735, -33.1857, 67.0572, -28.683, 76.0627, -32.3911, 80.8303, -35.0398, 94.3384, -31.3317, 101.225, -33.9803, 116.852, -28.9479, 117.911, -14.6451, 97.5168, -10.1424, 78.8754, -0.347504, 66.6254, 6.6525, 52.3754, 4.9025, 58.3754, 16.1525, 56.1254, 19.1525, 37.8754, 16.4025, 30.1254, 8.1525, 21.6254, 10.1525, 12.3754, 8.6525, -2.62459, 3.1525, -13.3746, -3.8475, -17.8746, -1.8475, -51.8746, -7.0975, -120.195, 15.9955, -137.204, 14.1056, -32.0005, -27.1568, -36.0952, -36.2912 ), PoolVector2Array( 69.7452, -37.2304, 89.0946, -21.6565, 108.208, -24.4881, 116.939, -19.7687, 114.343, -9.38609, 78.712, 3.59219, 65.7337, -3.01494, 38.3614, -2.77897, 30.8104, 6.42381, 20.4278, 5.95187, 23.7313, 13.7388, 16.6523, 23.4135, 3.20206, 15.8625, -3.64103, -2.77897, -43.2838, -8.67818, -95.753, -4.87692, -133.76, 1.48704, -134.842, -5.48795, -77.5155, -24.3868, -4.44008, -34.7811, -5.38503, -46.4354, 3.11945, -50.5301, 12.5689, -48.9552, 19.8134, -53.6799, 27.058, -51.4751, 31.1527, -37.9309, 42.807, -42.0257 ), PoolVector2Array( -134.592, -45.7541, -114.086, -43.2792, -54.6888, -22.066, -17.9192, -28.4299, -13.6766, -25.248, 4.70821, -36.9152, 27.3356, -38.683, 36.1745, -43.9863, 58.0948, -47.5218, 51.0237, -34.4404, 66.58, -36.2081, 94.1572, -19.5911, 118.199, -14.2878, 116.785, 1.6221, 96.6321, 4.09697, 77.5402, 4.80408, 66.2265, 0.207886, 62.3374, 4.45052, 13.1935, 13.2894, -14.3837, 11.5216, -27.8187, 20.3604, -37.3647, 2.68275, -34.8898, -3.32765 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CollisionPolygon2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0.374588, 10.8855 ), Vector2( 0.374588, 11.26 ), Vector2( 0.374588, 17.066 ), Vector2( 0.374588, 16.7538 ), Vector2( 0.374588, 11.7595 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "3walk"
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "3walk" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionPolygon2D:polygon")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ PoolVector2Array( -94.421, -27.4149, -73.7076, -20.5105, -19.1401, -20.5105, 2.46422, -34.5421, 23.6231, -37.6602, 34.3138, -33.2058, 49.4591, -41.892, 64.6044, -35.8784, 58.3681, -25.8558, 91.7806, -3.94644, 112.074, 12.3354, 112.546, 27.4374, 105.939, 30.505, 73.611, 7.38005, 62.2845, 12.0994, 50.4861, 6.67214, 30.1928, 5.96424, 17.2146, 18.4706, 4.47224, 22.718, -15.5851, 17.7627, -18.4167, 3.60455, -42.2495, 1.48083, -44.8452, -3.00257, -70.3298, -7.72194, -137.731, -43.3364, -140.254, -49.2227, -132.686, -47.1205 ), PoolVector2Array( 20.6401, -36.1316, 30.4045, -35.8166, 37.964, -28.5721, 68.2021, -26.0522, 79.2264, -32.6668, 106.315, -25.1073, 114.819, -18.4927, 117.024, -9.98824, 111.669, -4.63358, 105.37, -4.3186, 90.5657, -6.83844, 74.1868, 6.39073, 67.5722, 9.54053, 57.1778, 8.91058, 45.8385, 13.0053, 30.7195, 6.07575, 26.9397, 12.3754, 30.4045, 16.7851, 26.3098, 19.6199, 26.3098, 24.0296, 17.4903, 24.0296, 10.5607, 18.36, 1.74129, 20.5648, -4.55831, 19.3049, -4.87329, 6.07575, -72.5941, -4.94855, -133.23, -25.7086, -135.12, -32.9531, -103.937, -25.3936, -69.9187, -23.1887, -44.0904, -18.464, -2.82794, -25.7086, 0.636841, -28.2284, -2.19798, -30.4333, 3.78664, -47.4422, 14.496, -47.7572, 20.7956, -45.5523 ), PoolVector2Array( -28.5593, -49.8723, -20.8782, -46.9587, -15.0511, -41.3966, 19.1166, -42.456, 64.6735, -33.1857, 67.0572, -28.683, 76.0627, -32.3911, 80.8303, -35.0398, 94.3384, -31.3317, 101.225, -33.9803, 116.852, -28.9479, 117.911, -14.6451, 97.5168, -10.1424, 78.8754, -0.347504, 66.6254, 6.6525, 52.3754, 4.9025, 58.3754, 16.1525, 56.1254, 19.1525, 37.8754, 16.4025, 30.1254, 8.1525, 21.6254, 10.1525, 12.3754, 8.6525, -2.62459, 3.1525, -13.3746, -3.8475, -17.8746, -1.8475, -51.8746, -7.0975, -120.195, 15.9955, -137.204, 14.1056, -32.0005, -27.1568, -36.0952, -36.2912 ), PoolVector2Array( 69.7452, -37.2304, 89.0946, -21.6565, 108.208, -24.4881, 116.939, -19.7687, 114.343, -9.38609, 78.712, 3.59219, 65.7337, -3.01494, 38.3614, -2.77897, 30.8104, 6.42381, 20.4278, 5.95187, 23.7313, 13.7388, 16.6523, 23.4135, 3.20206, 15.8625, -3.64103, -2.77897, -43.2838, -8.67818, -95.753, -4.87692, -133.76, 1.48704, -134.842, -5.48795, -77.5155, -24.3868, -4.44008, -34.7811, -5.38503, -46.4354, 3.11945, -50.5301, 12.5689, -48.9552, 19.8134, -53.6799, 27.058, -51.4751, 31.1527, -37.9309, 42.807, -42.0257 ), PoolVector2Array( -134.592, -45.7541, -114.086, -43.2792, -54.6888, -22.066, -17.9192, -28.4299, -13.6766, -25.248, 4.70821, -36.9152, 27.3356, -38.683, 36.1745, -43.9863, 58.0948, -47.5218, 51.0237, -34.4404, 66.58, -36.2081, 94.1572, -19.5911, 118.199, -14.2878, 116.785, 1.6221, 96.6321, 4.09697, 77.5402, 4.80408, 66.2265, 0.207886, 62.3374, 4.45052, 13.1935, 13.2894, -14.3837, 11.5216, -27.8187, 20.3604, -37.3647, 2.68275, -34.8898, -3.32765 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CollisionPolygon2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0.374588, 0.0227356 ), Vector2( 0.374588, 11.26 ), Vector2( 0.374588, 23.4338 ), Vector2( 0.374588, 16.0047 ), Vector2( 0.374588, 5.39168 ) ]
}

[node name="GeneralDino" type="Area2D" groups=[
"dinos",
]]
collision_mask = 76
script = ExtResource( 11 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
rotation = -1.57079
scale = Vector2( 1.15, 1.15 )
frames = ExtResource( 2 )
animation = "3walk"
frame = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/1walk = SubResource( 1 )
anims/2walk = SubResource( 2 )
anims/3walk = SubResource( 3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 0.374588, 5.39168 )
polygon = PoolVector2Array( -134.592, -45.7541, -114.086, -43.2792, -54.6888, -22.066, -17.9192, -28.4299, -13.6766, -25.248, 4.70821, -36.9152, 27.3356, -38.683, 36.1745, -43.9863, 58.0948, -47.5218, 51.0237, -34.4404, 66.58, -36.2081, 94.1572, -19.5911, 118.199, -14.2878, 116.785, 1.6221, 96.6321, 4.09697, 77.5402, 4.80408, 66.2265, 0.207886, 62.3374, 4.45052, 13.1935, 13.2894, -14.3837, 11.5216, -27.8187, 20.3604, -37.3647, 2.68275, -34.8898, -3.32765 )

[node name="HealthBar" type="TextureProgress" parent="."]
margin_left = -41.4013
margin_top = -57.5924
margin_right = 354.599
margin_bottom = -4.59242
rect_scale = Vector2( 0.205609, 0.205609 )
value = 27.0
rounded = true
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="TransparencyTween" type="Tween" parent="."]

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 3.0

[node name="ThumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = 10.0

[node name="AttackingTimer" type="Timer" parent="."]

[node name="PathFollowTween" type="Tween" parent="."]
[connection signal="area_entered" from="." to="." method="_on_GeneralDino_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_GeneralDino_body_entered"]
[connection signal="timeout" from="AttackingTimer" to="." method="_on_AttackingTimer_timeout"]
